src/parser/ppre.yacc.output
Terminals unused in grammar

    NOT


State 0 conflicts: 2 shift/reduce
State 8 conflicts: 9 reduce/reduce
State 16 conflicts: 2 shift/reduce
State 29 conflicts: 11 shift/reduce
State 35 conflicts: 2 shift/reduce
State 36 conflicts: 3 shift/reduce
State 50 conflicts: 1 shift/reduce
State 51 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 56 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce
State 58 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 63 conflicts: 1 shift/reduce
State 64 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 76 conflicts: 2 reduce/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 85 conflicts: 2 shift/reduce
State 86 conflicts: 2 shift/reduce
State 87 conflicts: 2 shift/reduce
State 88 conflicts: 2 shift/reduce
State 89 conflicts: 2 shift/reduce
State 90 conflicts: 3 shift/reduce
State 91 conflicts: 3 shift/reduce
State 103 conflicts: 4 reduce/reduce
State 106 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce


Grammar

    0 $accept: all1 $end

    1 all1: all2
    2     | all1 all2

    3 all2: def1
    4     | undef1
    5     | err1
    6     | msg1
    7     | mac1
    8     | ifdef1
    9     | elifdef1
   10     | else1
   11     | endif1
   12     | ch2
   13     | num1

   14 def1: sp1 DEF sp2 ID spnl
   15     | sp1 DEF spnl

   16 undef1: sp1 UNDEF sp2 ID spnl
   17       | sp1 UNDEF spnl

   18 err1: ERR sp1 STR spnl

   19 msg1: MSG sp1 STR spnl

   20 mac1: MAC sp1 ID sp1 STR spnl

   21 ifdef1: sp1 IFDEF sp2 ID spnl

   22 elifdef1: sp1 ELIFDEF sp2 ID spnl

   23 endif1: sp1 ENDIF spnl

   24 else1: ELSE

   25 sp1: %empty
   26    | SP

   27 sp1a: %empty
   28     | SP
   29     | sp1a SP

   30 sp2: SP
   31    | sp2 SP

   32 spnl: SP
   33     | NL
   34     | COMMENT

   35 ch2: ch1
   36    | ch2 ch1

   37 ops1: PLUS
   38     | MINUS
   39     | MULT
   40     | DIV
   41     | MOD

   42 ch1: CH
   43    | id1
   44    | SP
   45    | ops1
   46    | NL
   47    | STR
   48    | COMMENT

   49 id1: ID

   50 num1: expr1

   51 expr1: expr2
   52      | expr1 OR expr2
   53      | expr1 XOR expr2
   54      | expr1 AND expr2
   55      | expr1 RSHIFT expr2
   56      | expr1 LSHIFT expr2

   57 expr2: expr3
   58      | expr2 PLUS expr3
   59      | expr2 MINUS expr3

   60 expr3: expr4
   61      | expr3 MULT expr4
   62      | expr3 DIV expr4
   63      | expr3 MOD expr4

   64 expr4: expr5
   65      | sp1a PAREN1 sp1a expr1 sp1a PAREN2 sp1a
   66      | sp1a MINUS sp1a expr5

   67 expr5: sp1a NUM sp1a


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PLUS <sym> (258) 37 58
    MINUS <sym> (259) 38 59 66
    MULT <sym> (260) 39 61
    DIV <sym> (261) 40 62
    MOD <sym> (262) 41 63
    OR <sym> (263) 52
    AND <sym> (264) 54
    XOR <sym> (265) 53
    NOT <sym> (266)
    LSHIFT <sym> (267) 56
    RSHIFT <sym> (268) 55
    PAREN1 <sym> (269) 65
    PAREN2 <sym> (270) 65
    CH <sym> (271) 42
    ID <sym> (272) 14 16 20 21 22 49
    SP <sym> (273) 26 28 29 30 31 32 44
    NL <sym> (274) 33 46
    STR <sym> (275) 18 19 20 47
    COMMENT <sym> (276) 34 48
    NUM <sym> (277) 67
    MAC <sym> (278) 20
    IFDEF <sym> (279) 21
    ENDIF <sym> (280) 23
    ELSE <sym> (281) 24
    ELIFDEF <sym> (282) 22
    DEF <sym> (283) 14 15
    UNDEF <sym> (284) 16 17
    ERR <sym> (285) 18
    MSG <sym> (286) 19


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    all1 <sym> (33)
        on left: 1 2
        on right: 0 2
    all2 <sym> (34)
        on left: 3 4 5 6 7 8 9 10 11 12 13
        on right: 1 2
    def1 <sym> (35)
        on left: 14 15
        on right: 3
    undef1 <sym> (36)
        on left: 16 17
        on right: 4
    err1 <sym> (37)
        on left: 18
        on right: 5
    msg1 <sym> (38)
        on left: 19
        on right: 6
    mac1 <sym> (39)
        on left: 20
        on right: 7
    ifdef1 <sym> (40)
        on left: 21
        on right: 8
    elifdef1 <sym> (41)
        on left: 22
        on right: 9
    endif1 <sym> (42)
        on left: 23
        on right: 11
    else1 <sym> (43)
        on left: 24
        on right: 10
    sp1 <sym> (44)
        on left: 25 26
        on right: 14 15 16 17 18 19 20 21 22 23
    sp1a <sym> (45)
        on left: 27 28 29
        on right: 29 65 66 67
    sp2 (46)
        on left: 30 31
        on right: 14 16 21 22 31
    spnl <sym> (47)
        on left: 32 33 34
        on right: 14 15 16 17 18 19 20 21 22 23
    ch2 (48)
        on left: 35 36
        on right: 12 36
    ops1 <sym> (49)
        on left: 37 38 39 40 41
        on right: 45
    ch1 <sym> (50)
        on left: 42 43 44 45 46 47 48
        on right: 35 36
    id1 <sym> (51)
        on left: 49
        on right: 43
    num1 <sym> (52)
        on left: 50
        on right: 13
    expr1 <sym> (53)
        on left: 51 52 53 54 55 56
        on right: 50 52 53 54 55 56 65
    expr2 <sym> (54)
        on left: 57 58 59
        on right: 51 52 53 54 55 56 58 59
    expr3 <sym> (55)
        on left: 60 61 62 63
        on right: 57 58 59 61 62 63
    expr4 <sym> (56)
        on left: 64 65 66
        on right: 60 61 62 63
    expr5 <sym> (57)
        on left: 67
        on right: 64 66


State 0

    0 $accept: • all1 $end

    PLUS     shift, and go to state 1
    MINUS    shift, and go to state 2
    MULT     shift, and go to state 3
    DIV      shift, and go to state 4
    MOD      shift, and go to state 5
    CH       shift, and go to state 6
    ID       shift, and go to state 7
    SP       shift, and go to state 8
    NL       shift, and go to state 9
    STR      shift, and go to state 10
    COMMENT  shift, and go to state 11
    MAC      shift, and go to state 12
    ELSE     shift, and go to state 13
    ERR      shift, and go to state 14
    MSG      shift, and go to state 15

    MINUS     [reduce using rule 27 (sp1a)]
    PAREN1    reduce using rule 27 (sp1a)
    SP        [reduce using rule 27 (sp1a)]
    NUM       reduce using rule 27 (sp1a)
    $default  reduce using rule 25 (sp1)

    all1      go to state 16
    all2      go to state 17
    def1      go to state 18
    undef1    go to state 19
    err1      go to state 20
    msg1      go to state 21
    mac1      go to state 22
    ifdef1    go to state 23
    elifdef1  go to state 24
    endif1    go to state 25
    else1     go to state 26
    sp1       go to state 27
    sp1a      go to state 28
    ch2       go to state 29
    ops1      go to state 30
    ch1       go to state 31
    id1       go to state 32
    num1      go to state 33
    expr1     go to state 34
    expr2     go to state 35
    expr3     go to state 36
    expr4     go to state 37
    expr5     go to state 38


State 1

   37 ops1: PLUS •

    $default  reduce using rule 37 (ops1)


State 2

   38 ops1: MINUS •

    $default  reduce using rule 38 (ops1)


State 3

   39 ops1: MULT •

    $default  reduce using rule 39 (ops1)


State 4

   40 ops1: DIV •

    $default  reduce using rule 40 (ops1)


State 5

   41 ops1: MOD •

    $default  reduce using rule 41 (ops1)


State 6

   42 ch1: CH •

    $default  reduce using rule 42 (ch1)


State 7

   49 id1: ID •

    $default  reduce using rule 49 (id1)


State 8

   26 sp1: SP •
   28 sp1a: SP •
   44 ch1: SP •

    MINUS     reduce using rule 28 (sp1a)
    MINUS     [reduce using rule 44 (ch1)]
    PAREN1    reduce using rule 28 (sp1a)
    PAREN1    [reduce using rule 44 (ch1)]
    SP        reduce using rule 28 (sp1a)
    SP        [reduce using rule 44 (ch1)]
    NUM       reduce using rule 28 (sp1a)
    NUM       [reduce using rule 44 (ch1)]
    IFDEF     reduce using rule 26 (sp1)
    IFDEF     [reduce using rule 44 (ch1)]
    ENDIF     reduce using rule 26 (sp1)
    ENDIF     [reduce using rule 44 (ch1)]
    ELIFDEF   reduce using rule 26 (sp1)
    ELIFDEF   [reduce using rule 44 (ch1)]
    DEF       reduce using rule 26 (sp1)
    DEF       [reduce using rule 44 (ch1)]
    UNDEF     reduce using rule 26 (sp1)
    UNDEF     [reduce using rule 44 (ch1)]
    $default  reduce using rule 44 (ch1)


State 9

   46 ch1: NL •

    $default  reduce using rule 46 (ch1)


State 10

   47 ch1: STR •

    $default  reduce using rule 47 (ch1)


State 11

   48 ch1: COMMENT •

    $default  reduce using rule 48 (ch1)


State 12

   20 mac1: MAC • sp1 ID sp1 STR spnl

    SP  shift, and go to state 39

    $default  reduce using rule 25 (sp1)

    sp1  go to state 40


State 13

   24 else1: ELSE •

    $default  reduce using rule 24 (else1)


State 14

   18 err1: ERR • sp1 STR spnl

    SP  shift, and go to state 39

    $default  reduce using rule 25 (sp1)

    sp1  go to state 41


State 15

   19 msg1: MSG • sp1 STR spnl

    SP  shift, and go to state 39

    $default  reduce using rule 25 (sp1)

    sp1  go to state 42


State 16

    0 $accept: all1 • $end
    2 all1: all1 • all2

    $end     shift, and go to state 43
    PLUS     shift, and go to state 1
    MINUS    shift, and go to state 2
    MULT     shift, and go to state 3
    DIV      shift, and go to state 4
    MOD      shift, and go to state 5
    CH       shift, and go to state 6
    ID       shift, and go to state 7
    SP       shift, and go to state 8
    NL       shift, and go to state 9
    STR      shift, and go to state 10
    COMMENT  shift, and go to state 11
    MAC      shift, and go to state 12
    ELSE     shift, and go to state 13
    ERR      shift, and go to state 14
    MSG      shift, and go to state 15

    MINUS     [reduce using rule 27 (sp1a)]
    PAREN1    reduce using rule 27 (sp1a)
    SP        [reduce using rule 27 (sp1a)]
    NUM       reduce using rule 27 (sp1a)
    $default  reduce using rule 25 (sp1)

    all2      go to state 44
    def1      go to state 18
    undef1    go to state 19
    err1      go to state 20
    msg1      go to state 21
    mac1      go to state 22
    ifdef1    go to state 23
    elifdef1  go to state 24
    endif1    go to state 25
    else1     go to state 26
    sp1       go to state 27
    sp1a      go to state 28
    ch2       go to state 29
    ops1      go to state 30
    ch1       go to state 31
    id1       go to state 32
    num1      go to state 33
    expr1     go to state 34
    expr2     go to state 35
    expr3     go to state 36
    expr4     go to state 37
    expr5     go to state 38


State 17

    1 all1: all2 •

    $default  reduce using rule 1 (all1)


State 18

    3 all2: def1 •

    $default  reduce using rule 3 (all2)


State 19

    4 all2: undef1 •

    $default  reduce using rule 4 (all2)


State 20

    5 all2: err1 •

    $default  reduce using rule 5 (all2)


State 21

    6 all2: msg1 •

    $default  reduce using rule 6 (all2)


State 22

    7 all2: mac1 •

    $default  reduce using rule 7 (all2)


State 23

    8 all2: ifdef1 •

    $default  reduce using rule 8 (all2)


State 24

    9 all2: elifdef1 •

    $default  reduce using rule 9 (all2)


State 25

   11 all2: endif1 •

    $default  reduce using rule 11 (all2)


State 26

   10 all2: else1 •

    $default  reduce using rule 10 (all2)


State 27

   14 def1: sp1 • DEF sp2 ID spnl
   15     | sp1 • DEF spnl
   16 undef1: sp1 • UNDEF sp2 ID spnl
   17       | sp1 • UNDEF spnl
   21 ifdef1: sp1 • IFDEF sp2 ID spnl
   22 elifdef1: sp1 • ELIFDEF sp2 ID spnl
   23 endif1: sp1 • ENDIF spnl

    IFDEF    shift, and go to state 45
    ENDIF    shift, and go to state 46
    ELIFDEF  shift, and go to state 47
    DEF      shift, and go to state 48
    UNDEF    shift, and go to state 49


State 28

   29 sp1a: sp1a • SP
   65 expr4: sp1a • PAREN1 sp1a expr1 sp1a PAREN2 sp1a
   66      | sp1a • MINUS sp1a expr5
   67 expr5: sp1a • NUM sp1a

    MINUS   shift, and go to state 50
    PAREN1  shift, and go to state 51
    SP      shift, and go to state 52
    NUM     shift, and go to state 53


State 29

   12 all2: ch2 •
   36 ch2: ch2 • ch1

    PLUS     shift, and go to state 1
    MINUS    shift, and go to state 2
    MULT     shift, and go to state 3
    DIV      shift, and go to state 4
    MOD      shift, and go to state 5
    CH       shift, and go to state 6
    ID       shift, and go to state 7
    SP       shift, and go to state 54
    NL       shift, and go to state 9
    STR      shift, and go to state 10
    COMMENT  shift, and go to state 11

    PLUS      [reduce using rule 12 (all2)]
    MINUS     [reduce using rule 12 (all2)]
    MULT      [reduce using rule 12 (all2)]
    DIV       [reduce using rule 12 (all2)]
    MOD       [reduce using rule 12 (all2)]
    CH        [reduce using rule 12 (all2)]
    ID        [reduce using rule 12 (all2)]
    SP        [reduce using rule 12 (all2)]
    NL        [reduce using rule 12 (all2)]
    STR       [reduce using rule 12 (all2)]
    COMMENT   [reduce using rule 12 (all2)]
    $default  reduce using rule 12 (all2)

    ops1  go to state 30
    ch1   go to state 55
    id1   go to state 32


State 30

   45 ch1: ops1 •

    $default  reduce using rule 45 (ch1)


State 31

   35 ch2: ch1 •

    $default  reduce using rule 35 (ch2)


State 32

   43 ch1: id1 •

    $default  reduce using rule 43 (ch1)


State 33

   13 all2: num1 •

    $default  reduce using rule 13 (all2)


State 34

   50 num1: expr1 •
   52 expr1: expr1 • OR expr2
   53      | expr1 • XOR expr2
   54      | expr1 • AND expr2
   55      | expr1 • RSHIFT expr2
   56      | expr1 • LSHIFT expr2

    OR      shift, and go to state 56
    AND     shift, and go to state 57
    XOR     shift, and go to state 58
    LSHIFT  shift, and go to state 59
    RSHIFT  shift, and go to state 60

    $default  reduce using rule 50 (num1)


State 35

   51 expr1: expr2 •
   58 expr2: expr2 • PLUS expr3
   59      | expr2 • MINUS expr3

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    PLUS      [reduce using rule 51 (expr1)]
    MINUS     [reduce using rule 51 (expr1)]
    $default  reduce using rule 51 (expr1)


State 36

   57 expr2: expr3 •
   61 expr3: expr3 • MULT expr4
   62      | expr3 • DIV expr4
   63      | expr3 • MOD expr4

    MULT  shift, and go to state 63
    DIV   shift, and go to state 64
    MOD   shift, and go to state 65

    MULT      [reduce using rule 57 (expr2)]
    DIV       [reduce using rule 57 (expr2)]
    MOD       [reduce using rule 57 (expr2)]
    $default  reduce using rule 57 (expr2)


State 37

   60 expr3: expr4 •

    $default  reduce using rule 60 (expr3)


State 38

   64 expr4: expr5 •

    $default  reduce using rule 64 (expr4)


State 39

   26 sp1: SP •

    $default  reduce using rule 26 (sp1)


State 40

   20 mac1: MAC sp1 • ID sp1 STR spnl

    ID  shift, and go to state 66


State 41

   18 err1: ERR sp1 • STR spnl

    STR  shift, and go to state 67


State 42

   19 msg1: MSG sp1 • STR spnl

    STR  shift, and go to state 68


State 43

    0 $accept: all1 $end •

    $default  accept


State 44

    2 all1: all1 all2 •

    $default  reduce using rule 2 (all1)


State 45

   21 ifdef1: sp1 IFDEF • sp2 ID spnl

    SP  shift, and go to state 69

    sp2  go to state 70


State 46

   23 endif1: sp1 ENDIF • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 74


State 47

   22 elifdef1: sp1 ELIFDEF • sp2 ID spnl

    SP  shift, and go to state 69

    sp2  go to state 75


State 48

   14 def1: sp1 DEF • sp2 ID spnl
   15     | sp1 DEF • spnl

    SP       shift, and go to state 76
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    sp2   go to state 77
    spnl  go to state 78


State 49

   16 undef1: sp1 UNDEF • sp2 ID spnl
   17       | sp1 UNDEF • spnl

    SP       shift, and go to state 76
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    sp2   go to state 79
    spnl  go to state 80


State 50

   66 expr4: sp1a MINUS • sp1a expr5

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a  go to state 82


State 51

   65 expr4: sp1a PAREN1 • sp1a expr1 sp1a PAREN2 sp1a

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a  go to state 83


State 52

   29 sp1a: sp1a SP •

    $default  reduce using rule 29 (sp1a)


State 53

   67 expr5: sp1a NUM • sp1a

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a  go to state 84


State 54

   44 ch1: SP •

    $default  reduce using rule 44 (ch1)


State 55

   36 ch2: ch2 ch1 •

    $default  reduce using rule 36 (ch2)


State 56

   52 expr1: expr1 OR • expr2

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr2  go to state 85
    expr3  go to state 36
    expr4  go to state 37
    expr5  go to state 38


State 57

   54 expr1: expr1 AND • expr2

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr2  go to state 86
    expr3  go to state 36
    expr4  go to state 37
    expr5  go to state 38


State 58

   53 expr1: expr1 XOR • expr2

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr2  go to state 87
    expr3  go to state 36
    expr4  go to state 37
    expr5  go to state 38


State 59

   56 expr1: expr1 LSHIFT • expr2

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr2  go to state 88
    expr3  go to state 36
    expr4  go to state 37
    expr5  go to state 38


State 60

   55 expr1: expr1 RSHIFT • expr2

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr2  go to state 89
    expr3  go to state 36
    expr4  go to state 37
    expr5  go to state 38


State 61

   58 expr2: expr2 PLUS • expr3

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr3  go to state 90
    expr4  go to state 37
    expr5  go to state 38


State 62

   59 expr2: expr2 MINUS • expr3

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr3  go to state 91
    expr4  go to state 37
    expr5  go to state 38


State 63

   61 expr3: expr3 MULT • expr4

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr4  go to state 92
    expr5  go to state 38


State 64

   62 expr3: expr3 DIV • expr4

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr4  go to state 93
    expr5  go to state 38


State 65

   63 expr3: expr3 MOD • expr4

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr4  go to state 94
    expr5  go to state 38


State 66

   20 mac1: MAC sp1 ID • sp1 STR spnl

    SP  shift, and go to state 39

    $default  reduce using rule 25 (sp1)

    sp1  go to state 95


State 67

   18 err1: ERR sp1 STR • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 96


State 68

   19 msg1: MSG sp1 STR • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 97


State 69

   30 sp2: SP •

    $default  reduce using rule 30 (sp2)


State 70

   21 ifdef1: sp1 IFDEF sp2 • ID spnl
   31 sp2: sp2 • SP

    ID  shift, and go to state 98
    SP  shift, and go to state 99


State 71

   32 spnl: SP •

    $default  reduce using rule 32 (spnl)


State 72

   33 spnl: NL •

    $default  reduce using rule 33 (spnl)


State 73

   34 spnl: COMMENT •

    $default  reduce using rule 34 (spnl)


State 74

   23 endif1: sp1 ENDIF spnl •

    $default  reduce using rule 23 (endif1)


State 75

   22 elifdef1: sp1 ELIFDEF sp2 • ID spnl
   31 sp2: sp2 • SP

    ID  shift, and go to state 100
    SP  shift, and go to state 99


State 76

   30 sp2: SP •
   32 spnl: SP •

    ID        reduce using rule 30 (sp2)
    ID        [reduce using rule 32 (spnl)]
    SP        reduce using rule 30 (sp2)
    SP        [reduce using rule 32 (spnl)]
    $default  reduce using rule 32 (spnl)


State 77

   14 def1: sp1 DEF sp2 • ID spnl
   31 sp2: sp2 • SP

    ID  shift, and go to state 101
    SP  shift, and go to state 99


State 78

   15 def1: sp1 DEF spnl •

    $default  reduce using rule 15 (def1)


State 79

   16 undef1: sp1 UNDEF sp2 • ID spnl
   31 sp2: sp2 • SP

    ID  shift, and go to state 102
    SP  shift, and go to state 99


State 80

   17 undef1: sp1 UNDEF spnl •

    $default  reduce using rule 17 (undef1)


State 81

   28 sp1a: SP •

    $default  reduce using rule 28 (sp1a)


State 82

   29 sp1a: sp1a • SP
   66 expr4: sp1a MINUS sp1a • expr5

    SP  shift, and go to state 103

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 104
    expr5  go to state 105


State 83

   29 sp1a: sp1a • SP
   65 expr4: sp1a PAREN1 sp1a • expr1 sp1a PAREN2 sp1a

    SP  shift, and go to state 103

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a   go to state 28
    expr1  go to state 106
    expr2  go to state 35
    expr3  go to state 36
    expr4  go to state 37
    expr5  go to state 38


State 84

   29 sp1a: sp1a • SP
   67 expr5: sp1a NUM sp1a •

    SP  shift, and go to state 52

    SP        [reduce using rule 67 (expr5)]
    $default  reduce using rule 67 (expr5)


State 85

   52 expr1: expr1 OR expr2 •
   58 expr2: expr2 • PLUS expr3
   59      | expr2 • MINUS expr3

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    PLUS      [reduce using rule 52 (expr1)]
    MINUS     [reduce using rule 52 (expr1)]
    $default  reduce using rule 52 (expr1)


State 86

   54 expr1: expr1 AND expr2 •
   58 expr2: expr2 • PLUS expr3
   59      | expr2 • MINUS expr3

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    PLUS      [reduce using rule 54 (expr1)]
    MINUS     [reduce using rule 54 (expr1)]
    $default  reduce using rule 54 (expr1)


State 87

   53 expr1: expr1 XOR expr2 •
   58 expr2: expr2 • PLUS expr3
   59      | expr2 • MINUS expr3

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    PLUS      [reduce using rule 53 (expr1)]
    MINUS     [reduce using rule 53 (expr1)]
    $default  reduce using rule 53 (expr1)


State 88

   56 expr1: expr1 LSHIFT expr2 •
   58 expr2: expr2 • PLUS expr3
   59      | expr2 • MINUS expr3

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    PLUS      [reduce using rule 56 (expr1)]
    MINUS     [reduce using rule 56 (expr1)]
    $default  reduce using rule 56 (expr1)


State 89

   55 expr1: expr1 RSHIFT expr2 •
   58 expr2: expr2 • PLUS expr3
   59      | expr2 • MINUS expr3

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62

    PLUS      [reduce using rule 55 (expr1)]
    MINUS     [reduce using rule 55 (expr1)]
    $default  reduce using rule 55 (expr1)


State 90

   58 expr2: expr2 PLUS expr3 •
   61 expr3: expr3 • MULT expr4
   62      | expr3 • DIV expr4
   63      | expr3 • MOD expr4

    MULT  shift, and go to state 63
    DIV   shift, and go to state 64
    MOD   shift, and go to state 65

    MULT      [reduce using rule 58 (expr2)]
    DIV       [reduce using rule 58 (expr2)]
    MOD       [reduce using rule 58 (expr2)]
    $default  reduce using rule 58 (expr2)


State 91

   59 expr2: expr2 MINUS expr3 •
   61 expr3: expr3 • MULT expr4
   62      | expr3 • DIV expr4
   63      | expr3 • MOD expr4

    MULT  shift, and go to state 63
    DIV   shift, and go to state 64
    MOD   shift, and go to state 65

    MULT      [reduce using rule 59 (expr2)]
    DIV       [reduce using rule 59 (expr2)]
    MOD       [reduce using rule 59 (expr2)]
    $default  reduce using rule 59 (expr2)


State 92

   61 expr3: expr3 MULT expr4 •

    $default  reduce using rule 61 (expr3)


State 93

   62 expr3: expr3 DIV expr4 •

    $default  reduce using rule 62 (expr3)


State 94

   63 expr3: expr3 MOD expr4 •

    $default  reduce using rule 63 (expr3)


State 95

   20 mac1: MAC sp1 ID sp1 • STR spnl

    STR  shift, and go to state 107


State 96

   18 err1: ERR sp1 STR spnl •

    $default  reduce using rule 18 (err1)


State 97

   19 msg1: MSG sp1 STR spnl •

    $default  reduce using rule 19 (msg1)


State 98

   21 ifdef1: sp1 IFDEF sp2 ID • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 108


State 99

   31 sp2: sp2 SP •

    $default  reduce using rule 31 (sp2)


State 100

   22 elifdef1: sp1 ELIFDEF sp2 ID • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 109


State 101

   14 def1: sp1 DEF sp2 ID • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 110


State 102

   16 undef1: sp1 UNDEF sp2 ID • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 111


State 103

   28 sp1a: SP •
   29     | sp1a SP •

    MINUS     reduce using rule 28 (sp1a)
    MINUS     [reduce using rule 29 (sp1a)]
    PAREN1    reduce using rule 28 (sp1a)
    PAREN1    [reduce using rule 29 (sp1a)]
    SP        reduce using rule 28 (sp1a)
    SP        [reduce using rule 29 (sp1a)]
    NUM       reduce using rule 28 (sp1a)
    NUM       [reduce using rule 29 (sp1a)]
    $default  reduce using rule 28 (sp1a)


State 104

   29 sp1a: sp1a • SP
   67 expr5: sp1a • NUM sp1a

    SP   shift, and go to state 52
    NUM  shift, and go to state 53


State 105

   66 expr4: sp1a MINUS sp1a expr5 •

    $default  reduce using rule 66 (expr4)


State 106

   52 expr1: expr1 • OR expr2
   53      | expr1 • XOR expr2
   54      | expr1 • AND expr2
   55      | expr1 • RSHIFT expr2
   56      | expr1 • LSHIFT expr2
   65 expr4: sp1a PAREN1 sp1a expr1 • sp1a PAREN2 sp1a

    OR      shift, and go to state 56
    AND     shift, and go to state 57
    XOR     shift, and go to state 58
    LSHIFT  shift, and go to state 59
    RSHIFT  shift, and go to state 60
    SP      shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a  go to state 112


State 107

   20 mac1: MAC sp1 ID sp1 STR • spnl

    SP       shift, and go to state 71
    NL       shift, and go to state 72
    COMMENT  shift, and go to state 73

    spnl  go to state 113


State 108

   21 ifdef1: sp1 IFDEF sp2 ID spnl •

    $default  reduce using rule 21 (ifdef1)


State 109

   22 elifdef1: sp1 ELIFDEF sp2 ID spnl •

    $default  reduce using rule 22 (elifdef1)


State 110

   14 def1: sp1 DEF sp2 ID spnl •

    $default  reduce using rule 14 (def1)


State 111

   16 undef1: sp1 UNDEF sp2 ID spnl •

    $default  reduce using rule 16 (undef1)


State 112

   29 sp1a: sp1a • SP
   65 expr4: sp1a PAREN1 sp1a expr1 sp1a • PAREN2 sp1a

    PAREN2  shift, and go to state 114
    SP      shift, and go to state 52


State 113

   20 mac1: MAC sp1 ID sp1 STR spnl •

    $default  reduce using rule 20 (mac1)


State 114

   65 expr4: sp1a PAREN1 sp1a expr1 sp1a PAREN2 • sp1a

    SP  shift, and go to state 81

    SP        [reduce using rule 27 (sp1a)]
    $default  reduce using rule 27 (sp1a)

    sp1a  go to state 115


State 115

   29 sp1a: sp1a • SP
   65 expr4: sp1a PAREN1 sp1a expr1 sp1a PAREN2 sp1a •

    SP  shift, and go to state 52

    SP        [reduce using rule 65 (expr4)]
    $default  reduce using rule 65 (expr4)
